--- a/views/index.html
+++ b/views/index.html
@@ -4,9 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+<link rel="stylesheet" href="../resources/css/window.css">
+
     <title>Document</title>
 </head>
-<body>
-    <h1>Escritorio</h1>
+<body class="window">
+    <div class="header">cabecera
+        <div class="top">
+            <!-- opciones de ventana -->
+            <ul>
+                <li>
+                    <i>minimizar</i>
+                </li>
+                <li>
+                    <i>maximizar</i>
+                </li>
+                <li>
+                    <i>cerrar</i>
+                </li>
+            </ul>
+        </div>
+        <div class="bottom">
+            <!-- opciones de applicacion -->
+            menu superior
+        </div>
+    </div>
+    <div>
+        <!-- contenido de applicacion -->
+        cuerpo
+        <ul>
+            <li>
+                imagen
+                configuracion
+            </li>
+            <!-- ... -->
+            <li>
+                añadir app
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
