--- a/views/index.html
+++ b/views/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<link rel="stylesheet" href="../resources/css/window.css">
+    <!-- CSS Links -->
+    <link rel="stylesheet" href="../resources/css/index.css">
 
-    <title>Document</title>
+    <title>Launcher</title>
 </head>
 <body class="window">
     <div class="header">cabecera
@@ -44,5 +45,8 @@
             </li>
         </ul>
     </div>
+
+    <!-- Js Links -->
+    <script src="../resources/js/index.js"></script>
 </body>
 </html>
