- Added gulp into the project. - Added gulp-sass for scss preprocessing. - Added browser-sync. - Added initial scss folder structure.

--- a/views/index.html
+++ b/views/index.html
@@ -6,25 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- CSS Links -->
-    <link rel="stylesheet" href="../resources/css/index.css">
+    <link rel="stylesheet" href="../resources/css/main.css">
 
     <title>Launcher</title>
 </head>
 <body class="window">
-    <div class="header">cabecera
+    <div class="header">
         <div class="top">
-            <!-- opciones de ventana -->
-            <ul>
-                <li>
-                    <i>minimizar</i>
-                </li>
-                <li>
-                    <i>maximizar</i>
-                </li>
-                <li>
-                    <i>cerrar</i>
-                </li>
-            </ul>
+            <div class="left">app name: Launcher</div>
+            <div class="center">detalle arrastre</div>
+            <div class="right">
+                <!-- opciones de ventana -->
+                <ul class="options">
+                    <li>
+                        <i>minimizar</i>
+                    </li>
+                    <li>
+                        <i>maximizar</i>
+                    </li>
+                    <li>
+                        <i>cerrar</i>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="bottom">
             <!-- opciones de applicacion -->
