--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$window-border-color: #fff;
+$window-border-color: rgb(255, 0, 0);
 $window-border-style: solid;
 $window-border-width: 1px;
 $window-border: $window-border-width $window-border-style $window-border-color;
