--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- CSS Links -->
-    <link rel="stylesheet" href="../resources/css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Launcher</title>
 </head>
@@ -51,6 +51,6 @@
     </div>
 
     <!-- Js Links -->
-    <script src="../resources/js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
