--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -7,7 +7,7 @@
             border: $window-border;
             .left {}
             .center {
-                color: #800080;
+                color: #2f8000;
                 -webkit-user-select: none;
                 -webkit-app-region: drag;
             }
