- Fixed project reload on html change.

--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <!-- CSS Links -->
-    <link rel="stylesheet" href="../css/main.css">
+        <!-- CSS Links -->
+        <link rel="stylesheet" href="../css/main.css">
 
-    <title>Launcher</title>
-</head>
-<body class="window">
-    <div class="header">
-        <div class="top">
-            <div class="left">app name: Launcher</div>
-            <div class="center">detalle arrastre</div>
-            <div class="right">
-                <!-- opciones de ventana -->
-                <ul class="options">
-                    <li>
-                        <i>minimizar</i>
-                    </li>
-                    <li>
-                        <i>maximizar</i>
-                    </li>
-                    <li>
-                        <i>cerrar</i>
-                    </li>
-                </ul>
+        <title>Launcher</title>
+    </head>
+    <body class="window">
+        <div class="header">
+            <div class="top">
+                <div class="left">app name: Launcher</div>
+                <div class="center">detalle arrastre</div>
+                <div class="right">
+                    <!-- opciones de ventana -->
+                    <ul class="options">
+                        <li>
+                            <i>minimizar</i>
+                        </li>
+                        <li>
+                            <i>maximizar</i>
+                        </li>
+                        <li>
+                            <i>cerrar</i>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom">
+                <!-- opciones de applicacion -->
+                menu superior
             </div>
         </div>
-        <div class="bottom">
-            <!-- opciones de applicacion -->
-            menu superior
+        <div>
+            <!-- contenido de applicacion -->
+            cuerpo
+            <ul>
+                <li>
+                    imagen
+                    configuracion
+                </li>
+                <!-- ... -->
+                <li>
+                    añadir app
+                </li>
+            </ul>
         </div>
-    </div>
-    <div>
-        <!-- contenido de applicacion -->
-        cuerpo
-        <ul>
-            <li>
-                imagen
-                configuracion
-            </li>
-            <!-- ... -->
-            <li>
-                añadir app
-            </li>
-        </ul>
-    </div>
 
-    <!-- Js Links -->
-    <script src="../js/index.js"></script>
-</body>
+        <!-- Js Links -->
+        <script src="../js/index.min.js"></script>
+    </body>
 </html>
