- Estructural changes on style folders. - Minor changes on windows appearance.

--- a/resources/views/index.html
+++ b/resources/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="window">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,8 +48,11 @@
                     añadir app
                 </li>
             </ul>
+            <div>
+                <!-- footer -->
+            </div>
         </div>
-
+        
         <!-- Js Links -->
         <script src="../js/index.min.js"></script>
     </body>
