--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,33 +1,29 @@
 @import 'abstracts/variables';
+// @import 'abstracts/functions';
+// @import 'abstracts/mixins';
+// @import 'abstracts/placeholders';
 
-.window {
-    border: 1px solid #000000;
-    > .header {
-        > .top {
-            border: $window-border;
-            .left {}
-            .center {
-                color: #2f8000;
-                -webkit-user-select: none;
-                -webkit-app-region: drag;
-            }
-            > .right {
-                > .options {
-                    list-style-type: none;
-                    text-align: right;
-                    padding: 0;
-                    margin: 0;
-                    > li {
-                        display: inline-block;
-                        > i {
-                            -webkit-app-region: no-drag;
-                        }
-                    }
-                }
-            }
-        }
-        > .bottom {
-            border: 1px solid #008000;
-        }
-    }
-}
+// @import 'vendors/bootstrap';
+// @import 'vendors/jquery-ui';
+
+@import 'base/reset';
+// @import 'base/typography';
+
+@import 'layout/window';
+// @import 'layout/navigation';
+// @import 'layout/grid';
+// @import 'layout/header';
+// @import 'layout/footer';
+// @import 'layout/sidebar';
+// @import 'layout/forms';
+
+// @import 'components/buttons';
+// @import 'components/carousel';
+// @import 'components/cover';
+// @import 'components/dropdown';
+
+// @import 'pages/home';
+// @import 'pages/contact';
+
+// @import 'themes/theme';
+// @import 'themes/admin';
