--- a/resources/sass/layout/_window.scss
+++ b/resources/sass/layout/_window.scss
@@ -2,23 +2,23 @@ html {
     box-sizing: border-box;
     height: 100%;
     border: $window-border;
+    // box-shadow: $window-shadow;
 }
 
 body {
     box-sizing: border-box;
     height: 100%;
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    border: $window-shadow-border;
     background-color: rgb(17, 27, 15);
-    margin: 0;
 }
 
 .window {
     > .header {
+        background-color: $window-backgraund-color;
         -webkit-app-region: drag;
         > .top {
             .left {}
             .center {
-                color: #2f8000;
                 > .right {
                     > .options {
                         list-style-type: none;
@@ -36,8 +36,7 @@ body {
             }
         }
         > .bottom {
-            border: 1px solid #008000;
-            // -webkit-app-region: no-drag;
+            border-bottom: $window-shadow-border;
             -webkit-user-select: none;
         }
     }
