--- a/resources/sass/layout/_window.scss
+++ b/resources/sass/layout/_window.scss
@@ -17,19 +17,18 @@ body {
         background-color: $window-backgraund-color;
         -webkit-app-region: drag;
         > .top {
-            .left {}
-            .center {
-                > .right {
-                    > .options {
-                        list-style-type: none;
-                        text-align: right;
-                        padding: 0;
-                        margin: 0;
-                        > li {
-                            display: inline-block;
-                            > i {
-                                -webkit-app-region: no-drag;
-                            }
+            // > .left {}
+            // > .center {}
+            > .right {
+                > .options {
+                    list-style-type: none;
+                    text-align: right;
+                    padding: 0;
+                    margin: 0;
+                    > li {
+                        display: inline-block;
+                        > i {
+                            -webkit-app-region: no-drag;
                         }
                     }
                 }
