--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,6 +2,9 @@ $black: rgb(0, 0, 0);
 $dark-gray: rgba(255, 255, 255, 0.10);
 $gray: rgba(255, 255, 255, 0.20);
 $light-gray: rgba(255, 255, 255, 0.30);
+$blue: rgb(56, 78, 97);;
+
+$window-background-color: $blue;
 
 $window-backgraund-color: $dark-gray;
 
