--- a/src/sass/layout/_window.scss
+++ b/src/sass/layout/_window.scss
@@ -8,17 +8,37 @@ body {
     box-sizing: border-box;
     height: 100%;
     border: $window-shadow-border;
-    background-color: rgb(17, 27, 15);
+    background-color: $window-background-color;
 }
 
 .window {
+    display: flex;
+    flex-direction: column;
     > .header {
         background-color: $window-backgraund-color;
         -webkit-app-region: drag;
+        user-select: none;
+        display: flex;
+        flex-direction: column;
         > .top {
-            // > .left {}
-            // > .center {}
+            display: inline-flex;
+            > .left {
+                flex-grow: 1;
+                padding: 5px;
+            }
+            > .center {
+                flex-grow: 4;
+                > .header-detail {
+                    background-color: $gray;
+                    border: 1px solid $gray;
+                    border-top: none;
+                    border-radius: 0 0 20px 20px;
+                    height: 10px;
+                }
+            }
             > .right {
+                flex-grow: 1;
+                padding: 5px;
                 > .options {
                     list-style-type: none;
                     text-align: right;
@@ -35,7 +55,6 @@ body {
         }
         > .bottom {
             border-bottom: $window-shadow-border;
-            -webkit-user-select: none;
         }
     }
 }
