--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,7 +14,9 @@
         <div class="header">
             <div class="top">
                 <div class="left">app name: Launcher</div>
-                <div class="center">detalle arrastre</div>
+                <div class="center">
+                    <div class="header-detail"></div>
+                </div>
                 <div class="right">
                     <!-- opciones de ventana -->
                     <ul class="options">
