--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,7 +13,7 @@
     <body class="window">
         <div class="header">
             <div class="top">
-                <div class="left">app name: Launcher</div>
+                <div class="left"></div>
                 <div class="center">
                     <div class="header-detail"></div>
                 </div>
@@ -21,13 +21,13 @@
                     <!-- opciones de ventana -->
                     <ul class="options">
                         <li>
-                            <i>minimizar</i>
+                            <i>m</i>
                         </li>
                         <li>
-                            <i>maximizar</i>
+                            <i>M</i>
                         </li>
                         <li>
-                            <i>cerrar</i>
+                            <i>C</i>
                         </li>
                     </ul>
                 </div>
