- Added eslint into the proyect. - Added background image. - Minor changes.

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,8 +5,8 @@ $white-10: rgba($white, 0.1);
 $white-20: rgba($white, 0.2);
 $white-30: rgba($white, 0.3);
 
-$background-color: rgb(19, 22, 26);
-$font-color: rgb(152, 152, 152);
+$background-color: rgb(97, 96, 81);
+// $font-color: rgb(152, 152, 152);
 
 $window-background-color: $background-color;
 
