--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import 'base/reset';
 // @import 'base/typography';
 
-@import 'layout/window';
+@import 'layout/frame';
 // @import 'layout/navigation';
 // @import 'layout/grid';
 // @import 'layout/header';
