--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,12 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <!-- CSS Links -->
         <link rel="stylesheet" href="../css/main.css">
 
         <title>Launcher</title>
     </head>
-    <body class="window">
+    <body class="frame">
         <div class="header">
             <div class="top">
                 <div class="left"></div>
@@ -18,7 +17,6 @@
                     <div class="header-detail"></div>
                 </div>
                 <div class="right">
-                    <!-- opciones de ventana -->
                     <ul class="options">
                         <li>
                             <i>m</i>
@@ -33,29 +31,24 @@
                 </div>
             </div>
             <div class="bottom">
-                <!-- opciones de applicacion -->
                 menu superior
             </div>
         </div>
         <div>
-            <!-- contenido de applicacion -->
             cuerpo
             <ul>
                 <li>
                     imagen
                     configuracion
                 </li>
-                <!-- ... -->
                 <li>
                     añadir app
                 </li>
             </ul>
             <div>
-                <!-- footer -->
             </div>
         </div>
         
-        <!-- Js Links -->
         <script src="../js/index.min.js"></script>
     </body>
 </html>
