--- a/src/sass/layout/_frame.scss
+++ b/src/sass/layout/_frame.scss
@@ -9,7 +9,7 @@ body {
     height: 100%;
     border: $window-shadow-border;
     background-color: $window-background-color;
-    background-image: url('../img/bg.png');
+    background-image: url('../img/bg_2.png');
     background-position: top center;
     background-repeat: no-repeat;
     // color: $font-color;
