--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,8 +9,8 @@
 
         <title>Launcher</title>
     </head>
-    <body class="frame">
-        <div class="header">
+    <body class="frame background">
+        <nav class="header">
             <div class="top">
                 <div class="left"></div>
                 <div class="center">
@@ -33,21 +33,22 @@
             <div class="bottom">
                 menu superior
             </div>
-        </div>
-        <div>
-            cuerpo
-            <ul>
-                <li>
-                    imagen
-                    configuracion
-                </li>
-                <li>
-                    añadir app
-                </li>
-            </ul>
+        </nav>
+        <main>
+            <div>menu</div>
             <div>
+                cuerpo
+                <ul>
+                    <li>
+                        imagen
+                        configuracion
+                    </li>
+                    <li>
+                        añadir app
+                    </li>
+                </ul>
             </div>
-        </div>
+        </main>
         
         <script src="../js/index.min.js"></script>
     </body>
