--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,26 +1,30 @@
 $black: rgb(0, 0, 0);
-
 $white: rgb(255, 255, 255);
+
 $white-10: rgba($white, 0.1);
 $white-20: rgba($white, 0.2);
 $white-30: rgba($white, 0.3);
+$white-50: rgba($white, 0.5);
 
 $background-color: rgb(85, 39, 16);
+$window-background-color: $background-color;
 // $font-color: rgb(152, 152, 152);
 
-$window-background-color: $background-color;
 
 $window-backgraund-color: $white-10;
 
-$window-border-color: $black;
-$window-border-style: solid;
-$window-border-width: 1px;
-$window-border: $window-border-width $window-border-style $window-border-color;
+// $window-border-color: $black;
 
-$window-shadow-border: 1px solid $white-20;
-$window-shadow: inset 0 0 0 1px $white-20;
+// $window-shadow-border: 1px solid $white-20;
 
+// Frame styles
 $frame-border-width: 1px;
 $frame-border-style: solid;
 $frame-border-color: $white-10;
+$frame-border-top: $frame-border-width $frame-border-style $frame-border-color;
+$frame-border-right: $frame-border-width $frame-border-style $frame-border-color;
 $frame-border-bottom: $frame-border-width $frame-border-style $frame-border-color;
+$frame-border-left: $frame-border-width $frame-border-style $frame-border-color;
+
+$frame-border: $frame-border-width $frame-border-style $black;
+$frame-shadow: inset 0 0 $frame-border-width $white-50;
