- Minor structural changes.

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,7 +6,8 @@ $white-20: rgba($white, 0.2);
 $white-30: rgba($white, 0.3);
 $white-50: rgba($white, 0.5);
 
-$background-color: rgb(85, 39, 16);
+// $background-color: rgb(85, 39, 16);
+$background-color: rgb(43, 42, 41);
 $window-background-color: $background-color;
 // $font-color: rgb(152, 152, 152);
 
