--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,8 +34,8 @@
                 menu superior
             </div>
         </nav>
-        <main>
-            <div>menu</div>
+        <main class="content">
+            <div>menu lateral</div>
             <div>
                 cuerpo
                 <ul>
