--- a/src/views/index.html
+++ b/src/views/index.html
@@ -35,8 +35,8 @@
             </div>
         </nav>
         <main class="content">
-            <div>menu lateral</div>
-            <div>
+            <div class="sidebar">menu lateral</div>
+            <div class="main">
                 cuerpo
                 <ul>
                     <li>
