--- a/src/sass/layout/_frame.scss
+++ b/src/sass/layout/_frame.scss
@@ -21,19 +21,15 @@ body {
     box-shadow: $frame-shadow;
     > .header {
         display: grid;
-        grid-template-columns: [start col-1] 1fr [end];
+        grid-template-columns: [start col-1] 112px [col-2] 1fr [col-3] 112px [end];
         grid-template-rows: [start row-1] auto [row-2] auto [end];
-        grid-column: col-1;
-        grid-row: row-1;
         background-color: $header-backgraund-color;
         // backdrop-filter: blur(5px);
         -webkit-app-region: drag;
         user-select: none;
         border-bottom: $frame-border-bottom;
         > .top {
-            display: grid;
-            grid-template-columns: [start col-1] 112px [col-2] 1fr [col-3] 112px [end];
-            grid-row: 1;
+            display: contents;
             > .left {
                 grid-column: col-1;
             }
@@ -55,12 +51,11 @@ body {
         }
         // > .middle {}
         > .bottom {
+            grid-column: start / end;
             grid-row: 2;
         }
     }
     > .content {
-        grid-column: col-1;
-        grid-row: row-2;
         display: grid;
         grid-template-columns: [start col-1] auto [col-2] 1fr [end];
         > .sidebar {
